--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="index, follow">
     <meta name="title" content="Jumpstart Service London | 24/7 Car Battery Jump Start | AM2PM Recovery">
+    <meta name="google-site-verification" content="YhMfkpsc7cdQaMotVwYO4wTLZnU3rAa65364KZaZfZM" />
     <meta name="description"
         content="24/7 jumpstart service London by AM2PM Recovery. Fast car battery jump start anywhere in London within 30 minutes. Call now for emergency roadside assistance.">
 
@@ -264,5 +265,6 @@
     </script>
     <script src="js/main.js"></script>
 </body>
+
 
 </html>
